# morgantown-operations-hub

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: precedence_rules.yaml  refresh_rules.yaml  sources.yaml
docs/: business-rules.md  canonical-schema.md  daily_output_schema.md  glossary_patterns.md  north_plant_scope.md  source-inventory.md  sources-inventory.md  v1-scope.md
mappings/: area_crosswalk.csv  product_crosswalk.csv  unit_crosswalk.csv
samples/: README.md  source_candidates_fixture.json
src/morgantown_ops_hub/: __init__.py  config_loader.py  config_models.py  extract.py  io_excel.py  logging_utils.py  main.py  models.py  normalize.py  qa.py  reconcile.py  snapshot.py  source_resolution.py
tests/: test_config_loading.py  test_normalize.py  test_reconcile.py  test_snapshot.py  test_source_resolution.py
